# chess-outcome-prediction

./: .gitattributes  .gitignore  README.md  convert.py  data_preprocessing.ipynb  data_preprocessing_early.ipynb  data_preprocessing_full.ipynb  eda_and_feature.ipynb  eda_and_feature_early.ipynb  eda_and_feature_full.ipynb  eda_and_feature_mid.ipynb  feature_engineering.ipynb  pyproject.toml  stockfish.ipynb
data/: chess_games_clean.csv  chess_games_feature.csv
models/: decision_tree.ipynb  decision_tree_early.ipynb  decision_tree_early_sf.ipynb  logistic_regression.ipynb  logistic_regression_early.ipynb  logistic_regression_early_sf.ipynb  neural_network.ipynb  neural_network_early.ipynb  neural_network_early_sf.ipynb  random_forest.ipynb  random_forest_early.ipynb  random_forest_early_sf.ipynb  xgboost.ipynb  xgboost_early.ipynb  xgboost_early_sf.ipynb
notebooks/: statistics.ipynb
notebooks/01_convert/: convert_full.py  convert_pregame.py
notebooks/03_eda_features/: pregame_eda_features.ipynb
