[project]
name = "data-science"
version = "0.1.0"
description = "Fundamentals of Data Science final project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-chess>=1.999",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pandarallel>=1.6.5",
    "ruff>=0.14.8",
    "tqdm>=4.67.1",
]
